--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,6 +350,7 @@ table{
     border-collapse: collapse;
     margin: 20px auto;
     font-size: 20px;
+    position:relative;
 }
 tr{
     border-bottom: solid 0.5px teal;
