--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,9 +252,11 @@ mark{
     border-radius: 10px 0px;
     margin-bottom: 10px;
     transition: 2s;
+    cursor: pointer;
 }
 .img:hover{
     filter: grayscale(100%);
+    transform: scale(1.1);
     transition: 1s;
 }
 .mt{
